# practice

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.vscode-example/: settings.json
atcoder/abc162/: README.md
atcoder/abc165/: README.md
atcoder/abc166/: README.md
atcoder/abc167/: README.md
atcoder/abc168/: README.md
atcoder/abc170_a/: main.py
atcoder/abc170_b/: main.py
atcoder/abc170_c/: main.py
atcoder/abc170_d/: main.py
atcoder/abc170_e/: main.cpp
atcoder/abc170_f/: main.cpp
atcoder/abc171_a/: main.py
atcoder/abc171_b/: main.py
atcoder/abc171_c/: main.py
atcoder/abc171_d/: main.py
atcoder/abc171_e/: main.py
atcoder/abc171_f/: main.cpp  main.py
atcoder/abc172_a/: main.py
atcoder/abc172_b/: main.py
atcoder/abc172_c/: main.py
atcoder/abc172_d/: main.js
atcoder/abc172_e/: main.cpp  main.js  main.py
atcoder/abc172_f/: main.py
atcoder/abc173_a/: main.py
atcoder/abc173_b/: main.py
atcoder/abc173_c/: main.js
atcoder/abc173_d/: main.py
atcoder/abc173_e/: main.py
atcoder/abc173_e--wip/: main.py
atcoder/abc173_f/: main.py
atcoder/abc174_a/: main.py
atcoder/abc174_b/: main.py
atcoder/abc174_c/: main.py
atcoder/abc174_d/: main.py
atcoder/abc174_e/: main.py
atcoder/abc174_f/: main.cpp
atcoder/abc175/: README.md
atcoder/abc177/: README.md
atcoder/abc178/: README.md
atcoder/abc179/: README.md
atcoder/abc180/: README.md
atcoder/abc181/: README.md
atcoder/abc182/: README.md
atcoder/abc183/: README.md
atcoder/abc186/: README.md
atcoder/abc260/: README.md
atcoder/abl0/: README.md
atcoder/agc049/: README.md
atcoder/arc106/: README.md
atcoder/arc107/: README.md
atcoder/arc108/: README.md
atcoder/arc109/: README.md
atcoder/arc122/: README.md
atcoder/dp/: README.md
codechef/COOK123/: README.md
codechef/DEC20/: README.md
codechef/LTIME88B/: README.md
codechef/LTIME89/: README.md
codechef/NOV20/: README.md
codeforces/contest665/: README.md
codeforces/contest666/: README.md
codeforces/contest667/: README.md
codeforces/contest668/: README.md
codeforces/contest669/: README.md
codeforces/contest670/: README.md
codeforces/contest671/: README.md
codeforces/contest673/: README.md
codeforces/contest674/: README.md
codeforces/contest675/: README.md
codeforces/edu86/: README.md
codeforces/edu87/: README.md
codeforces/edu88/: README.md
codeforces/edu89/: README.md
codeforces/edu90/: README.md
codeforces/edu91/: README.md
codeforces/edu92/: README.md
codeforces/edu93/: README.md
codeforces/edu94/: README.md
codeforces/edu95/: README.md
codeforces/edu96/: README.md
codeforces/ex1372B/: main.py
codeforces/ex1372C/: main.py
codeforces/ex1372D/: main.py
codeforces/ex1382A/: main.py
codeforces/ex1382B/: main.py
codeforces/ex1382C2/: main.py
codeforces/ex1382D/: main.js  main.py
codeforces/ex1382E--wip/: main.js
codeforces/ex1384A/: main.py
codeforces/ex1384C/: main.py
codeforces/ex1388A/: main.py
codeforces/ex1388B/: main.py
codeforces/ex1389A/: main.py
codeforces/ex1389B/: main.cpp
codeforces/ex1389B--wip/: main.py
codeforces/ex1389C/: main.py
codeforces/ex1389D/: main.cpp
codeforces/ex1389E/: main.cpp
codeforces/ex1389F/: main.cpp
codeforces/ex1393A/: main.cpp
codeforces/ex1393B/: main.cpp
codeforces/ex1393C/: main.cpp
codeforces/ex1399A/: main.cpp  main_v2.cpp
codeforces/ex1399B/: main.cpp
codeforces/ex1399C/: main.cpp
codeforces/ex1399D/: main.cpp
codeforces/ex1399E1/: main.cpp
codeforces/ex1399E2/: main.cpp  main_v2.cpp
codeforces/gym101853/: README.md
codeforces/gym102694/: README.md
cses/: README.md
experiment/cf1609a/: main.py
experiment/cf1609b/: main.cpp  main.py
experiment/cf1609d/: main.cpp  main.py
geeksforgeeks/: README.md
geeksforgeeks/box-stacking/: main.cpp
geeksforgeeks/count-occurences-of-anagrams/: main.cpp
geeksforgeeks/longest-bitonic-subsequence/: main.cpp  main_v2.cpp  main_v3.cpp
geeksforgeeks/longest-common-subsequence/: main.cpp
geeksforgeeks/maximum-sum-increasing-subsequence/: main.cpp  main_v2.cpp
google/: README.md
google/kickstart-2020-g/: README.md
google/kickstart-2020-h/: README.md
leetcode/problems/: README.md
library_checker/: README.md
library_checker/assignment/: main.cpp
library_checker/associative_array/: main.cpp  main_v2.cpp
library_checker/bipartitematching/: main.cpp  main_v2.cpp  main_v3.cpp
library_checker/bitwise_and_convolution/: main.cpp
library_checker/bitwise_xor_convolution/: main.cpp
library_checker/cartesian_tree/: main.cpp
library_checker/convolution_mod/: main.cpp
library_checker/convolution_mod_1000000007/: main.cpp  main_v2.cpp  main_v3.cpp  main_v4.cpp
library_checker/cycle_detection/: main.cpp
library_checker/directedmst/: main.cpp  main_v2.cpp
library_checker/discrete_logarithm_mod/: brute.cpp  generate.py  main.cpp  main_v2.cpp  test.sh
library_checker/dynamic_sequence_range_affine_range_sum/: brute.cpp  generate.py  main.cpp  main_v2.cpp  test.sh
library_checker/dynamic_tree_vertex_add_path_sum/: generate.py  main.cpp  test.sh
library_checker/enumerate_primes/: main.cpp  main_v2.cpp
library_checker/enumerate_triangles/: main.cpp
library_checker/factorize/: generate.py  main.cpp  main_v2.cpp  test.sh  wheel.py
library_checker/inv_of_formal_power_series/: generate.py  main.cpp
library_checker/kth_root_integer/: main.cpp  main_v2.cpp
library_checker/lca/: main.cpp
library_checker/line_add_get_min/: main.cpp  main_v2.cpp  main_v3.cpp
library_checker/manhattanmst/: main.cpp
library_checker/matrix_det/: main.cpp
library_checker/maximum_independent_set/: main.cpp
library_checker/multipoint_evaluation/: generate.py  (+1 more)
misc/: README.md  cookie_chrome.py  divisor.js  download.py  example.cpp  factorize.js  fibonacci.py  graphviz.py  graphviz.sh  misc.js  misc.py  mobius.cpp  prepare.sh  prime.js  pythagoras.js  radical.js  run.py  submit.py  totient.js
project_euler/: .gitignore  README.md  script.sh
(+1608 files in other folders)
