# add Cargo.toml so that vscode rust-analyzer can detect main files

[package]
name = "practice"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "template"
path = "misc/templates/main.rs"

[[bin]]
name = "cses-2189"
path = "cses/geometry/task2189/main.rs"

[[bin]]
name = "cses-2138-reachable-nodes"
path = "cses/advanced_techniques/task2138-reachable-nodes/main.rs"

[[bin]]
name = "cses-2420-palindrome-queries"
path = "cses/string_algorithms/task2420-palindrome-queries/main.rs"

[[bin]]
name = "cses-2420-palindrome-queries-v2"
path = "cses/string_algorithms/task2420-palindrome-queries/main_v2.rs"

[[bin]]
name = "cses-2420-palindrome-queries-v3"
path = "cses/string_algorithms/task2420-palindrome-queries/main_v3.rs"

[[bin]]
name = "cses-2420-palindrome-queries-v4"
path = "cses/string_algorithms/task2420-palindrome-queries/main_v4.rs"

[[bin]]
name = "cses-task2190-line-segment-intersection"
path = "cses/geometry/task2190-line-segment-intersection/main.rs"

[[bin]]
name = "abc260-a"
path = "atcoder/abc260/a/main.rs"

[[bin]]
name = "abc260-b"
path = "atcoder/abc260/b/main.rs"

[[bin]]
name = "abc260-d"
path = "atcoder/abc260/d/main.rs"

[[bin]]
name = "abc260-e"
path = "atcoder/abc260/e/main.rs"

[[bin]]
name = "abc260-f"
path = "atcoder/abc260/f/main.rs"

[[bin]]
name = "abc260-f-v2"
path = "atcoder/abc260/f/main_v2.rs"

[[bin]]
name = "abc261-a"
path = "atcoder/abc261/a/main.rs"

[[bin]]
name = "abc261-b"
path = "atcoder/abc261/b/main.rs"

[[bin]]
name = "abc261-c"
path = "atcoder/abc261/c/main.rs"

# [[bin]]
# name = "abc261-d"
# path = "atcoder/abc261/d/main.rs"

[[bin]]
name = "abc261-e"
path = "atcoder/abc261/e/main.rs"

[[bin]]
name = "abc262-a"
path = "atcoder/abc262/a/main.rs"

[[bin]]
name = "abc262-b"
path = "atcoder/abc262/b/main.rs"

[[bin]]
name = "abc262-c"
path = "atcoder/abc262/c/main.rs"

[[bin]]
name = "abc262-d"
path = "atcoder/abc262/d/main.rs"

[[bin]]
name = "abc262-d-v2"
path = "atcoder/abc262/d/main_v2.rs"

[[bin]]
name = "cses-mathematics-task2182-divisor-analysis"
path = "cses/mathematics/task2182-divisor-analysis/main.rs"

[[bin]]
name = "atcoder-abc263-a-main"
path = "atcoder/abc263/a/main.rs"

[[bin]]
name = "atcoder-abc263-a-main-v2"
path = "atcoder/abc263/a/main_v2.rs"

[[bin]]
name = "atcoder-abc263-b-main"
path = "atcoder/abc263/b/main.rs"

[[bin]]
name = "atcoder-abc263-c-main"
path = "atcoder/abc263/c/main.rs"

[[bin]]
name = "atcoder-abc263-d-main"
path = "atcoder/abc263/d/main.rs"

[[bin]]
name = "atcoder-abc263-d-main-v2"
path = "atcoder/abc263/d/main_v2.rs"

[[bin]]
name = "atcoder-abc263-e-main"
path = "atcoder/abc263/e/main.rs"

[[bin]]
name = "atcoder-abc261-d-main"
path = "atcoder/abc261/d/main.rs"

[[bin]]
name = "atcoder-abc262-e-main"
path = "atcoder/abc262/e/main.rs"

[[bin]]
name = "atcoder-abc261-f-main"
path = "atcoder/abc261/f/main.rs"

[[bin]]
name = "atcoder-abc264-a-main"
path = "atcoder/abc264/a/main.rs"

[[bin]]
name = "atcoder-abc264-b-main"
path = "atcoder/abc264/b/main.rs"

[[bin]]
name = "atcoder-abc264-c-main"
path = "atcoder/abc264/c/main.rs"

[[bin]]
name = "atcoder-abc264-c-main-v2"
path = "atcoder/abc264/c/main_v2.rs"

[[bin]]
name = "atcoder-abc264-d-main"
path = "atcoder/abc264/d/main.rs"

[[bin]]
name = "atcoder-abc264-e-main"
path = "atcoder/abc264/e/main.rs"
