# add Cargo.toml so that vscode rust-analyzer can detect main files

[package]
name = "practice"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "template"
path = "misc/templates/main.rs"

[[test]]
# run unit test by
#   cargo test --test template-lib
name = "template-lib"
path = "misc/templates/lib.rs"

[[bin]]
name = "cses-2189"
path = "cses/geometry/task2189/main.rs"

[[bin]]
name = "cses-2138-reachable-nodes"
path = "cses/advanced_techniques/task2138-reachable-nodes/main.rs"

[[bin]]
name = "cses-2420-palindrome-queries"
path = "cses/string_algorithms/task2420-palindrome-queries/main.rs"

[[bin]]
name = "cses-2420-palindrome-queries-v2"
path = "cses/string_algorithms/task2420-palindrome-queries/main_v2.rs"

[[bin]]
name = "cses-2420-palindrome-queries-v3"
path = "cses/string_algorithms/task2420-palindrome-queries/main_v3.rs"

[[bin]]
name = "cses-2420-palindrome-queries-v4"
path = "cses/string_algorithms/task2420-palindrome-queries/main_v4.rs"

[[bin]]
name = "cses-task2190-line-segment-intersection"
path = "cses/geometry/task2190-line-segment-intersection/main.rs"

[[bin]]
name = "abc260-a"
path = "atcoder/abc260/a/main.rs"

[[bin]]
name = "abc260-b"
path = "atcoder/abc260/b/main.rs"

[[bin]]
name = "abc260-d"
path = "atcoder/abc260/d/main.rs"

[[bin]]
name = "abc260-e"
path = "atcoder/abc260/e/main.rs"

[[bin]]
name = "abc260-f"
path = "atcoder/abc260/f/main.rs"

[[bin]]
name = "abc260-f-v2"
path = "atcoder/abc260/f/main_v2.rs"

[[bin]]
name = "abc261-a"
path = "atcoder/abc261/a/main.rs"

[[bin]]
name = "abc261-b"
path = "atcoder/abc261/b/main.rs"

[[bin]]
name = "abc261-c"
path = "atcoder/abc261/c/main.rs"

# [[bin]]
# name = "abc261-d"
# path = "atcoder/abc261/d/main.rs"

[[bin]]
name = "abc261-e"
path = "atcoder/abc261/e/main.rs"

[[bin]]
name = "abc262-a"
path = "atcoder/abc262/a/main.rs"

[[bin]]
name = "abc262-b"
path = "atcoder/abc262/b/main.rs"

[[bin]]
name = "abc262-c"
path = "atcoder/abc262/c/main.rs"

[[bin]]
name = "abc262-d"
path = "atcoder/abc262/d/main.rs"

[[bin]]
name = "abc262-d-v2"
path = "atcoder/abc262/d/main_v2.rs"

[[bin]]
name = "cses-mathematics-task2182-divisor-analysis"
path = "cses/mathematics/task2182-divisor-analysis/main.rs"

[[bin]]
name = "atcoder-abc263-a-main"
path = "atcoder/abc263/a/main.rs"

[[bin]]
name = "atcoder-abc263-a-main-v2"
path = "atcoder/abc263/a/main_v2.rs"

[[bin]]
name = "atcoder-abc263-b-main"
path = "atcoder/abc263/b/main.rs"

[[bin]]
name = "atcoder-abc263-c-main"
path = "atcoder/abc263/c/main.rs"

[[bin]]
name = "atcoder-abc263-d-main"
path = "atcoder/abc263/d/main.rs"

[[bin]]
name = "atcoder-abc263-d-main-v2"
path = "atcoder/abc263/d/main_v2.rs"

[[bin]]
name = "atcoder-abc263-e-main"
path = "atcoder/abc263/e/main.rs"

[[bin]]
name = "atcoder-abc261-d-main"
path = "atcoder/abc261/d/main.rs"

[[bin]]
name = "atcoder-abc262-e-main"
path = "atcoder/abc262/e/main.rs"

[[bin]]
name = "atcoder-abc261-f-main"
path = "atcoder/abc261/f/main.rs"

[[bin]]
name = "atcoder-abc264-a-main"
path = "atcoder/abc264/a/main.rs"

[[bin]]
name = "atcoder-abc264-b-main"
path = "atcoder/abc264/b/main.rs"

[[bin]]
name = "atcoder-abc264-c-main"
path = "atcoder/abc264/c/main.rs"

[[bin]]
name = "atcoder-abc264-c-main-v2"
path = "atcoder/abc264/c/main_v2.rs"

[[bin]]
name = "atcoder-abc264-d-main"
path = "atcoder/abc264/d/main.rs"

[[bin]]
name = "atcoder-abc264-e-main"
path = "atcoder/abc264/e/main.rs"

[[bin]]
name = "atcoder-abc259-b-main"
path = "atcoder/abc259/b/main.rs"

[[bin]]
name = "atcoder-abc259-d-main"
path = "atcoder/abc259/d/main.rs"

[[bin]]
name = "atcoder-abc259-e-main"
path = "atcoder/abc259/e/main.rs"

[[bin]]
name = "atcoder-abc265-c-main"
path = "atcoder/abc265/c/main.rs"

[[bin]]
name = "atcoder-abc265-d-main"
path = "atcoder/abc265/d/main.rs"

[[bin]]
name = "atcoder-abc266-c-main"
path = "atcoder/abc266/c/main.rs"

[[bin]]
name = "atcoder-abc266-d-main"
path = "atcoder/abc266/d/main.rs"

[[bin]]
name = "atcoder-abc266-e-main"
path = "atcoder/abc266/e/main.rs"

[[bin]]
name = "atcoder-abc266-f-main"
path = "atcoder/abc266/f/main.rs"

[[bin]]
name = "atcoder-abc266-f-main-v2"
path = "atcoder/abc266/f/main_v2.rs"

[[bin]]
name = "atcoder-abc258-d-main"
path = "atcoder/abc258/d/main.rs"

[[bin]]
name = "atcoder-abc258-e-main"
path = "atcoder/abc258/e/main.rs"

[[bin]]
name = "atcoder-abc267-c-main"
path = "atcoder/abc267/c/main.rs"

[[bin]]
name = "atcoder-abc267-d-main"
path = "atcoder/abc267/d/main.rs"

[[bin]]
name = "atcoder-abc257-c-main"
path = "atcoder/abc257/c/main.rs"

[[bin]]
name = "atcoder-abc257-d-main"
path = "atcoder/abc257/d/main.rs"

[[bin]]
name = "atcoder-abc257-e-main"
path = "atcoder/abc257/e/main.rs"

[[bin]]
name = "atcoder-abc268-c-main"
path = "atcoder/abc268/c/main.rs"

[[bin]]
name = "atcoder-abc268-d-main"
path = "atcoder/abc268/d/main.rs"

[[bin]]
name = "atcoder-abc269-c-main"
path = "atcoder/abc269/c/main.rs"

[[bin]]
name = "atcoder-abc269-d-main"
path = "atcoder/abc269/d/main.rs"

[[bin]]
name = "atcoder-abc269-e-main"
path = "atcoder/abc269/e/main.rs"

[[bin]]
name = "atcoder-abc270-c-main"
path = "atcoder/abc270/c/main.rs"

[[bin]]
name = "atcoder-abc270-d-main"
path = "atcoder/abc270/d/main.rs"

[[bin]]
name = "atcoder-abc270-e-main"
path = "atcoder/abc270/e/main.rs"

[[bin]]
name = "atcoder-abc271-c-main"
path = "atcoder/abc271/c/main.rs"

[[bin]]
name = "atcoder-abc271-c-main-v2"
path = "atcoder/abc271/c/main_v2.rs"

[[bin]]
name = "atcoder-abc271-d-main"
path = "atcoder/abc271/d/main.rs"

[[bin]]
name = "atcoder-abc271-e-main"
path = "atcoder/abc271/e/main.rs"

[[bin]]
name = "atcoder-abc272-c-main"
path = "atcoder/abc272/c/main.rs"

[[bin]]
name = "atcoder-abc272-d-main"
path = "atcoder/abc272/d/main.rs"

[[bin]]
name = "atcoder-abc273-d-main"
path = "atcoder/abc273/d/main.rs"

[[bin]]
name = "atcoder-abc273-e-main"
path = "atcoder/abc273/e/main.rs"

[[bin]]
name = "atcoder-abc274-c-main"
path = "atcoder/abc274/c/main.rs"

[[bin]]
name = "atcoder-abc274-d-main"
path = "atcoder/abc274/d/main.rs"

[[bin]]
name = "atcoder-abc274-e-main"
path = "atcoder/abc274/e/main.rs"

[[bin]]
name = "atcoder-abc275-c-main"
path = "atcoder/abc275/c/main.rs"

[[bin]]
name = "atcoder-abc275-d-main"
path = "atcoder/abc275/d/main.rs"

[[bin]]
name = "atcoder-abc275-d-main-v2"
path = "atcoder/abc275/d/main_v2.rs"

[[bin]]
name = "atcoder-abc275-e-main"
path = "atcoder/abc275/e/main.rs"

[[bin]]
name = "atcoder-abc276-d-main"
path = "atcoder/abc276/d/main.rs"

[[bin]]
name = "atcoder-abc276-e-main"
path = "atcoder/abc276/e/main.rs"

[[bin]]
name = "atcoder-abc276-f-main"
path = "atcoder/abc276/f/main.rs"

[[bin]]
name = "atcoder-abc277-c-main"
path = "atcoder/abc277/c/main.rs"

[[bin]]
name = "atcoder-abc277-d-main"
path = "atcoder/abc277/d/main.rs"

[[bin]]
name = "atcoder-abc277-d-main-v2"
path = "atcoder/abc277/d/main_v2.rs"

[[bin]]
name = "atcoder-abc277-e-main"
path = "atcoder/abc277/e/main.rs"

[[bin]]
name = "atcoder-abc278-d-main"
path = "atcoder/abc278/d/main.rs"

[[bin]]
name = "atcoder-abc278-e-main"
path = "atcoder/abc278/e/main.rs"

[[bin]]
name = "atcoder-abc278-f-main"
path = "atcoder/abc278/f/main.rs"

[[bin]]
name = "atcoder-abc279-d-main"
path = "atcoder/abc279/d/main.rs"

[[bin]]
name = "atcoder-abc279-e-main"
path = "atcoder/abc279/e/main.rs"

[[bin]]
name = "atcoder-abc279-e-main-v2"
path = "atcoder/abc279/e/main_v2.rs"

[[bin]]
name = "atcoder-abc279-f-main"
path = "atcoder/abc279/f/main.rs"

[[bin]]
name = "atcoder-abc280-d-main"
path = "atcoder/abc280/d/main.rs"

[[bin]]
name = "atcoder-abc280-d-main-v1"
path = "atcoder/abc280/d/main_v1.rs"

[[bin]]
name = "atcoder-abc280-d-brute"
path = "atcoder/abc280/d/brute.rs"

[[bin]]
name = "atcoder-abc280-e-main"
path = "atcoder/abc280/e/main.rs"

[[bin]]
name = "atcoder-abc280-f-main"
path = "atcoder/abc280/f/main.rs"

[[bin]]
name = "atcoder-abc281-d-main"
path = "atcoder/abc281/d/main.rs"

[[bin]]
name = "atcoder-abc281-e-main"
path = "atcoder/abc281/e/main.rs"

[[bin]]
name = "atcoder-abc281-f-main"
path = "atcoder/abc281/f/main.rs"

[[bin]]
name = "atcoder-abc281-f-main-v2"
path = "atcoder/abc281/f/main_v2.rs"

[[bin]]
name = "atcoder-abc282-d-main"
path = "atcoder/abc282/d/main.rs"

[[bin]]
name = "atcoder-abc282-e-main"
path = "atcoder/abc282/e/main.rs"

[[bin]]
name = "atcoder-abc282-f-main"
path = "atcoder/abc282/f/main.rs"

[[bin]]
name = "atcoder-abc283-d-main"
path = "atcoder/abc283/d/main.rs"

[[bin]]
name = "atcoder-abc283-e-main"
path = "atcoder/abc283/e/main.rs"

[[bin]]
name = "atcoder-abc283-f-main"
path = "atcoder/abc283/f/main.rs"

[[bin]]
name = "atcoder-abc284-d-main"
path = "atcoder/abc284/d/main.rs"

[[bin]]
name = "atcoder-abc284-e-main"
path = "atcoder/abc284/e/main.rs"

[[bin]]
name = "atcoder-abc284-f-main"
path = "atcoder/abc284/f/main.rs"

[[bin]]
name = "atcoder-abc285-d-main"
path = "atcoder/abc285/d/main.rs"

[[bin]]
name = "atcoder-abc285-d-main-v2"
path = "atcoder/abc285/d/main_v2.rs"

[[bin]]
name = "atcoder-abc285-d-main-v3"
path = "atcoder/abc285/d/main_v3.rs"

[[bin]]
name = "atcoder-abc285-d-main-v4"
path = "atcoder/abc285/d/main_v4.rs"

[[bin]]
name = "atcoder-abc285-e-main"
path = "atcoder/abc285/e/main.rs"

[[bin]]
name = "atcoder-abc286-c-main"
path = "atcoder/abc286/c/main.rs"

[[bin]]
name = "atcoder-abc286-d-main"
path = "atcoder/abc286/d/main.rs"

[[bin]]
name = "atcoder-abc286-e-main"
path = "atcoder/abc286/e/main.rs"

[[bin]]
name = "atcoder-abc287-c-main"
path = "atcoder/abc287/c/main.rs"

[[bin]]
name = "atcoder-abc287-c-main-v2"
path = "atcoder/abc287/c/main_v2.rs"

[[bin]]
name = "atcoder-abc287-d-main"
path = "atcoder/abc287/d/main.rs"

[[bin]]
name = "atcoder-abc287-e-main"
path = "atcoder/abc287/e/main.rs"

[[bin]]
name = "atcoder-abc288-c-main"
path = "atcoder/abc288/c/main.rs"

[[bin]]
name = "atcoder-abc289-d-main"
path = "atcoder/abc289/d/main.rs"

[[bin]]
name = "atcoder-abc289-e-main"
path = "atcoder/abc289/e/main.rs"

[[bin]]
name = "atcoder-abc289-e-main-v2"
path = "atcoder/abc289/e/main_v2.rs"

[[bin]]
name = "atcoder-abc290-d-main"
path = "atcoder/abc290/d/main.rs"

[[bin]]
name = "atcoder-abc290-e-main"
path = "atcoder/abc290/e/main.rs"

[[bin]]
name = "atcoder-abc291-d-main"
path = "atcoder/abc291/d/main.rs"

[[bin]]
name = "atcoder-abc291-e-main"
path = "atcoder/abc291/e/main.rs"

[[bin]]
name = "atcoder-abc291-e-main-v2"
path = "atcoder/abc291/e/main_v2.rs"

[[bin]]
name = "atcoder-abc292-c-main"
path = "atcoder/abc292/c/main.rs"

[[bin]]
name = "atcoder-abc292-d-main"
path = "atcoder/abc292/d/main.rs"

[[bin]]
name = "atcoder-abc292-e-main"
path = "atcoder/abc292/e/main.rs"

[[bin]]
name = "atcoder-abc293-d-main"
path = "atcoder/abc293/d/main.rs"

[[bin]]
name = "atcoder-abc293-e-main"
path = "atcoder/abc293/e/main.rs"

[[bin]]
name = "atcoder-abc294-e-main"
path = "atcoder/abc294/e/main.rs"

[[bin]]
name = "atcoder-abc297-e-main"
path = "atcoder/abc297/e/main.rs"

[[bin]]
name = "atcoder-abc298-c-main"
path = "atcoder/abc298/c/main.rs"

[[bin]]
name = "atcoder-abc298-d-main"
path = "atcoder/abc298/d/main.rs"

[[bin]]
name = "atcoder-abc298-e-main"
path = "atcoder/abc298/e/main.rs"

[[bin]]
name = "atcoder-abc298-f-main"
path = "atcoder/abc298/f/main.rs"

[[bin]]
name = "atcoder-abc299-d-main"
path = "atcoder/abc299/d/main.rs"

[[bin]]
name = "atcoder-abc299-e-main"
path = "atcoder/abc299/e/main.rs"

[[bin]]
name = "atcoder-abc300-d-main"
path = "atcoder/abc300/d/main.rs"

[[bin]]
name = "atcoder-abc300-e-main"
path = "atcoder/abc300/e/main.rs"

[[bin]]
name = "atcoder-abc301-d-main"
path = "atcoder/abc301/d/main.rs"

[[bin]]
name = "atcoder-abc301-e-main"
path = "atcoder/abc301/e/main.rs"

[[bin]]
name = "atcoder-abc302-e-main"
path = "atcoder/abc302/e/main.rs"

[[bin]]
name = "atcoder-abc302-f-main"
path = "atcoder/abc302/f/main.rs"

[[bin]]
name = "atcoder-abc303-d-main"
path = "atcoder/abc303/d/main.rs"

[[bin]]
name = "atcoder-abc303-e-main"
path = "atcoder/abc303/e/main.rs"

[[bin]]
name = "atcoder-abc304-d-main"
path = "atcoder/abc304/d/main.rs"

[[bin]]
name = "atcoder-abc304-e-main"
path = "atcoder/abc304/e/main.rs"

[[bin]]
name = "atcoder-abc305-d-main"
path = "atcoder/abc305/d/main.rs"

[[bin]]
name = "atcoder-abc305-e-main"
path = "atcoder/abc305/e/main.rs"

[[bin]]
name = "atcoder-abc305-f-main"
path = "atcoder/abc305/f/main.rs"

[[bin]]
name = "atcoder-abc306-d-main"
path = "atcoder/abc306/d/main.rs"

[[bin]]
name = "atcoder-abc306-f-main"
path = "atcoder/abc306/f/main.rs"

[[bin]]
name = "atcoder-abc307-d-main"
path = "atcoder/abc307/d/main.rs"

[[bin]]
name = "atcoder-abc308-c-main"
path = "atcoder/abc308/c/main.rs"

[[bin]]
name = "atcoder-abc308-c-main-v2"
path = "atcoder/abc308/c/main_v2.rs"

[[bin]]
name = "atcoder-abc308-d-main"
path = "atcoder/abc308/d/main.rs"

[[bin]]
name = "atcoder-abc308-e-main"
path = "atcoder/abc308/e/main.rs"

[[bin]]
name = "atcoder-abc309-d-main"
path = "atcoder/abc309/d/main.rs"

[[bin]]
name = "atcoder-abc309-d-main-v2"
path = "atcoder/abc309/d/main_v2.rs"

[[bin]]
name = "atcoder-abc309-e-main"
path = "atcoder/abc309/e/main.rs"

[[bin]]
name = "atcoder-abc309-e-main-v2"
path = "atcoder/abc309/e/main_v2.rs"

[[bin]]
name = "atcoder-abc310-d-main"
path = "atcoder/abc310/d/main.rs"

[[bin]]
name = "atcoder-abc310-e-main"
path = "atcoder/abc310/e/main.rs"

[[bin]]
name = "atcoder-abc311-c-main"
path = "atcoder/abc311/c/main.rs"

[[bin]]
name = "atcoder-abc311-d-main"
path = "atcoder/abc311/d/main.rs"

[[bin]]
name = "atcoder-abc311-e-main"
path = "atcoder/abc311/e/main.rs"

[[bin]]
name = "atcoder-abc311-e-main-v2"
path = "atcoder/abc311/e/main_v2.rs"

[[bin]]
name = "atcoder-abc312-c-main"
path = "atcoder/abc312/c/main.rs"

[[bin]]
name = "atcoder-abc313-c-main"
path = "atcoder/abc313/c/main.rs"

[[bin]]
name = "atcoder-abc313-d-main"
path = "atcoder/abc313/d/main.rs"

[[bin]]
name = "atcoder-abc314-d-main"
path = "atcoder/abc314/d/main.rs"

[[bin]]
name = "atcoder-abc314-f-main"
path = "atcoder/abc314/f/main.rs"

[[bin]]
name = "atcoder-abc315-d-main"
path = "atcoder/abc315/d/main.rs"

[[bin]]
name = "atcoder-abc315-e-main"
path = "atcoder/abc315/e/main.rs"

[[bin]]
name = "atcoder-abc315-f-main"
path = "atcoder/abc315/f/main.rs"

[[bin]]
name = "atcoder-abc317-c-main"
path = "atcoder/abc317/c/main.rs"

[[bin]]
name = "atcoder-abc317-c-main-v2"
path = "atcoder/abc317/c/main_v2.rs"

[[bin]]
name = "atcoder-abc317-c-main-v3"
path = "atcoder/abc317/c/main_v3.rs"

[[bin]]
name = "atcoder-abc317-d-main"
path = "atcoder/abc317/d/main.rs"

[[bin]]
name = "atcoder-abc317-e-main"
path = "atcoder/abc317/e/main.rs"

[[bin]]
name = "atcoder-abc318-c-main"
path = "atcoder/abc318/c/main.rs"

[[bin]]
name = "atcoder-abc318-d-main"
path = "atcoder/abc318/d/main.rs"
