[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Hiroshi Ogawa <xxx@yyy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.931"
black = "^21.12b0"
isort = "^5.10.1"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
